compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__function_type_application.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn id(x) { x }\n\npub fn main() {\n  id(1)\n}\n  "
snapshot_kind: text
---
----- SOURCE CODE

fn id(x) { x }

pub fn main() {
  id(1)
}
  

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func id[I gleam_P.Type[I]](x I) I {
  return x
}

func Main() gleam_P.Int_t {
  return id[gleam_P.Int_t](1)
}
