compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__no_recur_in_anon_fn.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "pub fn main() {\n  fn() { main() }\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  fn() { main() }
  1
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main() gleam_P.Int_t {
  _ = func() gleam_P.Int_t { return Main() }
  return 1
}
