compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__pipe_variable_rebinding.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn main() {\n  let version = 1 |> version()\n  version\n}\n\npub fn version(n) {\n  Ok(1)\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let version = 1 |> version()
  version
}

pub fn version(n) {
  Ok(1)
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Version[J gleam_P.Type[J], M gleam_P.Type[M]](n J) gleam_P.Result_t[
  gleam_P.Int_t,
  M,
] {
  return gleam_P.Ok_c[gleam_P.Int_t, M]{1}
}

func Main[O gleam_P.Type[O]]() gleam_P.Result_t[gleam_P.Int_t, O] {
  var versionʹ1 gleam_P.Result_t[gleam_P.Int_t, O] = (func() gleam_P.Result_t[
      gleam_P.Int_t,
      O,
    ] {
    var _pipe gleam_P.Int_t = 1
    _ = _pipe
    return Version[gleam_P.Int_t, O](_pipe)
  })()
  _ = versionʹ1
  return versionʹ1
}
